test/fail/id/samenamefieldmethod.java
class Test {
    public int x;

    private void x() {
        int y = 3;
    }
}
